# portfolio-backend

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml
homepage/: admin.py  models.py  serializers.py  views.py
homepage/migrations/: 0001_initial.py
portfolio_backend/: settings.py  urls.py
