[tool.poetry]
name = "portfolio-backend"
version = "0.1.0"
description = ""
authors = ["Kaustubh Harapanahalli <kaustubhharapanahalli@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pydocstyle = "^6.3.0"
mypy = "^1.11.2"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
